# web-crud-system

./: README.md
mozilla-ext/: package-lock.json  package.json
mozilla-ext/public/: index.html  manifest.json
mozilla-ext/public/scripts/: content.js
mozilla-ext/src/: App.css  App.tsx  index.css
mozilla-ext/src/components/AppContent/ConfigDataContainer/: ConfigDataContainer.jsx
mozilla-ext/src/components/Header/: Header.jsx  Header.module.css
proxy-ecap/: CMakeLists.txt
proxy-ecap/ext/: CMakeLists.txt
proxy-ecap/ext/brotli/: CMakeLists.txt
proxy-ecap/ext/clucene/: CMakeLists.txt
proxy-ecap/ext/cpp_redis/: CMakeLists.txt
proxy-ecap/ext/cppfs/: CMakeLists.txt
proxy-ecap/ext/cpr/: CMakeLists.txt
proxy-ecap/ext/duktape/: CMakeLists.txt
proxy-ecap/ext/filesystem/: CMakeLists.txt
proxy-ecap/ext/hiredis/: CMakeLists.txt
proxy-ecap/ext/json/: CMakeLists.txt
proxy-ecap/ext/re2c/: CMakeLists.txt
proxy-ecap/ext/sqlite/: CMakeLists.txt
proxy-ecap/ext/string_view/: CMakeLists.txt
proxy-ecap/ext/termcolor/: CMakeLists.txt
proxy-ecap/ext/zlib-ng/: CMakeLists.txt
proxy-ecap/scripts/: config-script.js
proxy-ecap/scripts/login_config/: #.atlassian.com.js  #.box.com.js  #.force.com.js  #.zoom.us.js
proxy-ecap/src/appgw/: CMakeLists.txt  addon_token.cc  addon_token.hh  addons_registry.cc  addons_registry.hh  environment.cc  environment.hh  js_addon.cc  js_addon.hh
proxy-ecap/src/appgw/api/: console.cc  console.hh  jsurl.cc  jsurl.hh
proxy-ecap/src/appgw/driver/: CMakeLists.txt  main.cc
proxy-ecap/src/backend/: CMakeLists.txt  abstract_printer.hh  active_object.cc  active_object.hh  crc_64.cc  crc_64.hh  data_manager.cc  data_manager.hh  data_source.cc  data_source.hh  ev_util.cc  ev_util.hh  fs.hh  raise.hh  unused.hh  whereami.c  work_dir.cc  work_dir.hh
proxy-ecap/src/backend/redis/: redis_connection_parameters.hh  redis_io.cc  redis_io.hh
proxy-ecap/src/backend/sniffer/: fs_sniffer_storage.cc  fs_sniffer_storage.hh  sniffer_storage.cc  sniffer_storage.hh
proxy-ecap/src/backend/sqlite/: sqlite.cc  sqlite.hh
proxy-ecap/src/inspector/: CMakeLists.txt  body_widget.cc  body_widget.h  context_menu.cc  context_menu.h  details_tab.cc  details_tab.h  headers_model.cc  headers_model.h  headers_widget.cc  headers_widget.h  inspector_widget.cc  inspector_widget.h  label_with_menu.cc  label_with_menu.h  main.cc  transactions_model.cc  transactions_model.h  transactions_view.cc  transactions_view.h
proxy-ecap/src/inspector/qscintilla/: CMakeLists.txt  mainwindow.cpp
proxy-ecap/src/plugin/: CMakeLists.txt  constants.cc  constants.hh  content_encoding.cc  content_encoding.hh  fast_rand.cc  fast_rand.hh  logger.cc  logger.hh  service.cc  service.hh  string_utils.cc  string_utils.hh  version_info.cc.in  version_info.hh
proxy-ecap/src/plugin/conf/: 403.cc  403.hh  config_reader.cc  config_reader.hh  configurator.cc  configurator.hh  forbidden_page_config.cc  forbidden_page_config.hh  includes_config.cc  includes_config.hh  ini_reader.cc  ini_reader.hh  key_value_storage.cc  key_value_storage.hh  script_config.cc  script_config.hh
proxy-ecap/src/plugin/conf/data_manager/: dynamic_data_manager.cc  dynamic_data_manager.hh  hardcoded_data_manager.cc  hardcoded_data_manager.hh
proxy-ecap/src/plugin/conf/includes_loader/: abstract_includes_loader.cc  abstract_includes_loader.hh  ds_includes_loader.cc  ds_includes_loader.hh  fs_includes_loader.cc  fs_includes_loader.hh
proxy-ecap/src/plugin/filter/: blacklist.cc  blacklist.hh  glob_match.cc  glob_match.hh  ignore_list.cc  ignore_list.hh  replace_engine.cc  replace_engine.hh  response_acceptor.cc  response_acceptor.hh  sniffer.cc  sniffer.hh  tld.cc  tld.hh  trie.cc  trie.hh
proxy-ecap/src/plugin/filter/regdom/: lookup_string_in_fixed_set.cc  lookup_string_in_fixed_set.h  make_dafsa.py  registry_controlled_domain.cc  registry_controlled_domain.h
proxy-ecap/src/plugin/ipc/: factory.cc  factory.hh  ipc.cc  ipc.hh  message_parser.cc  message_parser.hh  redis_ipc.cc  redis_ipc.hh  sender_log.cc  sender_log.hh
proxy-ecap/src/plugin/pipeline/: blacklist_pipeline.cc  blacklist_pipeline.hh  pipeline.cc  pipeline.hh  pipeline_context.cc  pipeline_context.hh  request_pipeline.cc  request_pipeline.hh  response_pipeline.cc  response_pipeline.hh  response_replace_pipeline.cc  response_replace_pipeline.hh  script_ipc_pipeline.cc  script_ipc_pipeline.hh  zlc.cc  zlc.hh
proxy-ecap/src/plugin/pipeline/csp/: base64.hh  csp_header.cc  csp_header.hh  csp_parser.cc  csp_parser.hh  csp_scanner.h  csp_scanner.re2c  sha256.hh
proxy-ecap/src/plugin/pipeline/html/: html_scanner.h  html_scanner.re2c
proxy-ecap/src/plugin/pipeline/script/: script.cc  script.hh  script_data.cc  script_data.hh  script_writer.cc  script_writer.hh
proxy-ecap/src/plugin/pipeline/sniffer/: appgw_req_pipeline.cc  appgw_req_pipeline.hh  basic_sniffer.cc  basic_sniffer.hh  sniffer_req_pipeline.cc  sniffer_req_pipeline.hh  sniffer_resp_pipeline.cc  sniffer_resp_pipeline.hh
proxy-ecap/src/plugin/processors/: basic_processor.cc  basic_processor.hh  nanotimer.hh  perf_counter.cc  perf_counter.hh  request_processor.cc  request_processor.hh  response_processor.cc  response_processor.hh
proxy-ecap/src/plugin/sniffer_db/: sniffer_db.cc  sniffer_db.hh  sniffer_ipc.cc  sniffer_ipc.hh  sniffer_meta_data.cc  sniffer_meta_data.hh
proxy-ecap/src/plugin/template_engine/: te.cc  te.hh  te_scanner.h  te_scanner.re2c
proxy-ecap/src/sniffer-plug/: CMakeLists.txt  ipc.cc  ipc.hh  main.cc  project.cc  project.hh
proxy-ecap/src/sniffer-plug/commands/: abstract_command.cc  abstract_command.hh  cmd_help.cc  cmd_helper.hh  cmd_proj.cc  commands_registry.cc  commands_registry.hh
proxy-ecap/src/sniffer-plug/sniffer_data/: CMakeLists.txt  archive.cc  archive.hh  input_archive.cc  input_archive.hh
proxy-ecap/src/sniffer-plug/sniffer_data/zip/: ZipArchive.hpp  ZipEntry.hpp
proxy-ecap/src/unittest/: CMakeLists.txt  main.cc  test_base64.cc  test_duktape.cc  test_sha256.cc
proxy-ecap/utils/: gen_logger.py  gen_printer.py  tester.py
(+26 files in other folders)
